samples/_failures_safe/1761316692_533fff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_687aa4a2.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_687aa4a2.c:132:37: error: expected ‘)’ at end of input
  132 |     if (!matrix_init(result, a->cols
      |                     ~               ^
      |                                     )
./samples/SAFE/__tmp_687aa4a2.c:132:10: error: too few arguments to function ‘matrix_init’
  132 |     if (!matrix_init(result, a->cols
      |          ^~~~~~~~~~~
./samples/SAFE/__tmp_687aa4a2.c:22:5: note: declared here
   22 | int matrix_init(struct Matrix *m, int rows, int cols) {
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_687aa4a2.c:132:5: error: expected declaration or statement at end of input
  132 |     if (!matrix_init(result, a->cols
      |     ^~
